--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
     </section>
-    <script src="app/game.js" type="module"></script>
+    <script src="app/Game.js" type="module"></script>
 </body>
 
 </html>
